changed to Java 11 & IBM Semeru