@@ -1,17 +1,18 @@
-FROM openjdk:8-jre-alpine
+FROM ibm-semeru-runtimes:open-11-jre
 
 LABEL org.opencontainers.image.authors="oliver@die-thomsens.de"
 
 ARG H2_VERSION
 
-RUN apk add --no-cache curl
-
 ENV DOWNLOAD_URL https://repo1.maven.org/maven2/com/h2database/h2/${H2_VERSION}/h2-${H2_VERSION}.jar
 
 RUN curl ${DOWNLOAD_URL} -o h2.jar
 
+# set Java 11 memory settings
+ENV JAVA_XOPTS -XshowSettings:vm -XX:+UseContainerSupport -XX:MaxRAMPercentage=75 -Xtune:virtualized -XX:+IdleTuningCompactOnIdle -XX:+IdleTuningGcOnIdle
+
 WORKDIR /
-ENTRYPOINT java $JAVA_OPTS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -cp h2.jar org.h2.tools.Server -web -webAllowOthers -tcp -tcpAllowOthers -ifNotExists -baseDir /h2-data
+ENTRYPOINT java ${JAVA_XOPTS} $JAVA_OPTS -cp h2.jar org.h2.tools.Server -web -webAllowOthers -tcp -tcpAllowOthers -ifNotExists -baseDir /h2-data
 
 EXPOSE 8082 9092
 
